--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
       <img class="welcome-logo" src="images/welcome.svg" width="458" height="352"
            alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
+      <div class="decoration-frame"></div>
     </section>
     <section class="advantages" id="advantages">
       <h2 class="visually-hidden">Преимущества Седоны.</h2>
