--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </a>
   </footer>
 
-  <div class="modal-wrapper ">
+  <div class="modal-wrapper modal-open">
     <div class="modal">
       <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
       <button class="modal-close-button" type="button">
@@ -173,14 +173,14 @@
         <label class="modal-form-label date-label">
           Дата заезда:
           <input class="modal-form-input" type="text" name="checkin-date" id="checkin" placeholder="Укажите дату" value="27 апреля 2020">
-          <span class="date-input-success">На эти даты есть свободные номера. Пока есть.</span>
-          <span class="date-input-error show-error">Мы не можем отправить вас в прошлое.</span>
+          <span class="date-input-message">На эти даты есть свободные номера. Пока есть.</span>
+          <span class="date-input-message error-message show-error">Мы не можем отправить вас в прошлое.</span>
         </label>
         <label class="modal-form-label date-label">
           Дата Выезда:
           <input class="modal-form-input" type="text" name="checkout-date" id="checkout" placeholder="Укажите дату" value="1 сентября 2021">
-          <span class="date-input-success show-success">На эти даты есть свободные номера. Пока есть.</span>
-          <span class="date-input-error">Мы не можем отправить вас в прошлое.</span>
+          <span class="date-input-message show-success">На эти даты есть свободные номера. Пока есть.</span>
+          <span class="date-input-message error-message">Мы не можем отправить вас в прошлое.</span>
         </label>
         <label class="modal-form-label adults-label" for="adults-quantity">Взрослые:</label>
         <div class="modal-form-quantity-wrapper adults-wrapper">
@@ -198,14 +198,20 @@
             </svg>
           </button>
         </div>
-        <label class="modal-form-label children-label" for="children-quantity">Дети:</label>
-        <button class="button-tooltip" type="button">
-          <svg width="1" height="9" aria-labelledby="tooltip-modal" role="img">
-            <title id="tooltip-modal">Информация</title>
-            <use href="images/icons/modal.svg#info"></use>
-          </svg>
-        </button>
-        <div class="modal-form-quantity-wrapper">
+        <span class="modal-form-label">
+          <label class="modal-form-label children-label" for="children-quantity">Дети:</label>
+          <span class="tooltip">
+            <button class="button-tooltip" type="button" aria-labelledby="tooltip-info">
+              <svg width="1" height="9" aria-hidden="true" focusable="false" role="img">
+                <use href="images/icons/modal.svg#info"></use>
+              </svg>
+            </button>
+            <span class="tooltip-text" id="tooltip-info">Укажите количество детей,
+            которые будут с вами, возраст которых от 6 до 18 лет.
+            Дети до 6 лет размещаются бесплатно.</span>
+          </span>
+        </span>
+        <div class="modal-form-quantity-wrapper children-wrapper">
           <button class="quantity-button decrease-button" type="button">
             <svg width="13" height="1" aria-labelledby="decrease-btn" role="img">
               <use href="images/icons/modal.svg#decrease"></use>
