--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                alt="Мотель в Седоне.">
           <ul class="advantages-sub-list">
             <li class="advantages-item advantage-home advantage-semi-blue-light">
-              <h3 class="advantages-sub-list-title">Жилье</h3>
-              <p class="advantages-description">Рекомендуем пожить<br> в внастоящем мотеле, всё как в кино!</p>
+              <h3 class="advantages-sub-list-title">Жильё</h3>
+              <p class="advantages-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
             </li>
             <li class="advantages-item advantage-food">
               <h3 class="advantages-sub-list-title">Еда</h3>
@@ -83,7 +83,7 @@
         </li>
         <li class="advantages-important-item">
           <div class="advantages-item advantages-important-item-content">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
           <img class="advantages-image" src="images/advantage-image-2.jpg" width="800" height="384" alt="Мост Дьявола.">
@@ -104,13 +104,13 @@
     </section>
     <section class="offer" id="offer">
       <h2 class="offer-title">Заинтересовались?</h2>
-      <p class="offer-description">Укажите предполагаемые даты поездки,<br>
-        и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p class="offer-description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне
+      </p>
       <a class="button button-offer button-redirect" href="catalog.html">Поиск гостиницы в Седоне</a>
     </section>
     <section class="subscribe">
       <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-      <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
       <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="visually-hidden" for="email">e-mail</label>
         <input type="email" class="subscribe-form-email-input" id="email" name="email" placeholder="Ваш e-mail">
@@ -161,7 +161,7 @@
     </a>
   </footer>
 
-  <div class="modal-wrapper modal-open">
+  <div class="modal-wrapper">
     <div class="modal">
       <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
       <button class="modal-close-button" type="button">
@@ -172,7 +172,7 @@
       </button>
       <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="modal-form-label date-label">
-          Дата заезда:
+          Дата Заезда:
           <input class="modal-form-input" type="text" name="checkin-date" id="checkin" placeholder="Укажите дату" value="27 апреля 2020">
           <span class="date-input-message">На эти даты есть свободные номера. Пока есть.</span>
           <span class="date-input-message error-message show-error">Мы не можем отправить вас в прошлое.</span>
