добавит неразрывный пробел для pixel perfect

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
     </section>
     <section class="offer" id="offer">
       <h2 class="offer-title">Заинтересовались?</h2>
-      <p class="offer-description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне
-      </p>
+      <p class="offer-description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне&nbsp;&nbsp;</p>
       <a class="button button-offer button-redirect" href="catalog.html">Поиск гостиницы в Седоне</a>
     </section>
     <section class="subscribe">
