--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384"
+          <img class="advantages-image" src="images/advantage-motel.jpg" width="800" height="384"
                alt="Мотель в Седоне.">
           <ul class="advantages-sub-list">
             <li class="advantages-item advantage-home advantage-semi-blue-light">
@@ -87,7 +87,7 @@
             <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
-          <img class="advantages-image" src="images/advantage-image-2.jpg" width="800" height="384" alt="Мост Дьявола.">
+          <img class="advantages-image" src="images/advantage-bridge.jpg" width="800" height="384" alt="Мост Дьявола.">
         </li>
         <li class="advantages-item advantage-semi-blue-light">
           <h3 class="advantages-title ">Небольшая площадь</h3>
